[project]
name = "dungeon-drawer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.23.0",
    "pillow>=12.0.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.21",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
