[project]
name = "dungeon-letter"
version = "1.0.0"
description = "A web application to generate dungeon image with letters hidden."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.23.0",
    "pillow>=12.0.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.21",
    "flask>=3.1.2",
    "asgiref>=3.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
